# openslp

./: .hgignore  .hgsvnexternals  README.md
openslp/: .cvsignore  .kdbgrc.a.out  .kdbgrc.test  AUTHORS  CHANGELOG  COPYING  ChangeLog  FAQ  INSTALL  Makefile  Makefile.am  Makefile.in  Makefile.win32  NEWS  OpenSlp.dsp  OpenSlp.dsw  README  README.CVS  README.W32  THANKS  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  config.cache  config.status  configure  configure.ac  configure.in  defs.mk  libtool  rules.mk  slp.list.in
openslp.contrib/kio_slp/src/: Makefile.am  kio_slp.cpp  kio_slp.h  slp.protocol
openslp/common/: .cvsignore  Makefile.am  Makefile.in  Makefile.win32  common.dsp  common.dsw  common.mak  slp_atomic.c  slp_atomic.h  slp_attr.h  slp_attr_l.l  slp_attr_y.y  slp_auth.c  slp_auth.h  slp_buffer.c  slp_buffer.h  slp_compare.c  slp_compare.h  slp_crypto.c  slp_crypto.h  slp_da.c  slp_da.h  slp_database.c  slp_database.h  slp_debug.c  slp_debug.h  slp_dhcp.c  slp_dhcp.h  slp_filter.h  slp_filter_l.l  slp_filter_y.y  slp_iface.c  slp_iface.h  slp_linkedlist.c  slp_linkedlist.h  slp_logfile.c  slp_logfile.h  slp_message.c  slp_message.h  slp_net.c  (+31 more)
openslp/doc/: Makefile  Makefile.am  README  doxyfile.in  install.sh  main.html
openslp/doc/doc/html/: faq.html
openslp/doc/doc/rfc/: draft-ietf-svrloc-ipv6-05.txt  rfc1766.txt  rfc2396.txt  rfc2608.txt  rfc2609.txt  rfc3059.txt  rfc3082.txt  rfc3224.txt  rfc3421.txt  rfc3528.txt  threat_analysis_min_security.html
openslp/doc/doc/security/: openslp_security_whitepaper.html  srvreg-integrity.html  threat_analysis_min_security.html
openslp/doc/html/: faq.html
openslp/doc/html/IntroductionToSLP/: index.html
openslp/doc/html/ProgrammersGuide/: Callbacks.html  Divergence.html  Examples.html  SLPAttrCallback.html  SLPClose.html  SLPDeReg.html  SLPDelAttrs.html  SLPDereg.html  SLPError.html  SLPEscape.html  SLPFindAttrs.html  SLPFindScopes.html  SLPFindSrvTypes.html  SLPFindSrvs.html  (+16 more)
openslp/doc/rfc/: draft-zhao-slp-url-01.txt  rfc2165.txt  rfc2610.txt  rfc2614.txt  rfc3111.txt  srvreg-integrity.txt  threat_analysis_min_security.html
openslp/doxygen/: Doxyfile
openslp/etc/: Makefile.am  install.sh  slp.conf  slp.reg  slp.spi  slpd.all_init  slpd.calderaUNIX_init  slpd.caldera_init  slpd.redhat_init  slpd.suse_init
openslp/libslp/: .kdbgrc.a.out  Makefile  Makefile.am  Makefile.in  Makefile.win32  install.sh  libslp.def  libslp.dsp  libslp.dsw  libslp.h  libslp.mak  libslp.rc  libslp_delattrs.c  libslp_dereg.c  libslp_findattrs.c  libslp_findscopes.c  libslp_findsrvs.c  libslp_findsrvtypes.c  libslp_handle.c  libslp_knownda.c  libslp_network.c  libslp_parse.c  libslp_property.c  libslp_reg.c  libslp_thread.c  libslp_xid.c  resource.h  slp.h
openslp/libslpattr/: .cvsignore  Makefile.am  libslpattr.c  libslpattr.dsp  libslpattr.dsw  libslpattr.h  libslpattr.mak  libslpattr_internal.h  libslpattr_tiny.c
openslp/obs/: README  debian.changelog.in  debian.control.in  debian.rules.in  openslp.dsc.in  openslp.spec.in
openslp/slpd/: .cvsignore  .kdbgrc.a.out  .kdbgrc.slpd  Makefile  Makefile.am  Makefile.in  Makefile.win32  install.sh  resource.h  slpd.c  slpd.dsp  slpd.dsw  slpd.h  slpd.mak  slpd.rc  slpd_cmdline.c  slpd_cmdline.h  slpd_database.c  slpd_database.h  slpd_incoming.c  slpd_incoming.h  slpd_index.c  slpd_index.h  slpd_knownda.c  slpd_knownda.h  slpd_log.c  slpd_log.h  slpd_main.c  slpd_outgoing.c  slpd_outgoing.h  slpd_predicate.c  slpd_predicate.h  slpd_process.c  slpd_process.h  slpd_property.c  slpd_property.h  slpd_regfile.c  slpd_regfile.h  slpd_service.c  slpd_socket.c  (+9 more)
openslp/slptool/: .cvsignore  Makefile.am  slptool.c  slptool.h
openslp/test/: .cvsignore  Makefile  Makefile.am  Makefile.in  README  slp_debug.h
openslp/test/SLPD_predicate_test/: slpd_predicate_test.c
openslp/test/SLPD_wildcard_test/: slpd_wildcard_test.c
openslp/test/SLPDereg/: Makefile  SLPDereg.c  SLPDereg.expected.output  slp.test.conf  slp.test.reg  test.script
openslp/test/SLPEscape/: Makefile  SLPEscape.c  SLPEscape.expected.output  slp.test.reg  test.script
openslp/test/SLPFindAttrs/: Makefile  SLPFindAttrs.c  SLPFindAttrs.expected.output  test.script
openslp/test/SLPFindSrvTypes/: SLPFindSrvTypes.c  SLPFindSrvTypes.expected.output  slp.test.reg  test.script
openslp/test/SLPFindSrvs/: Makefile  SLPFindSrvs.c  SLPFindSrvs.dsp  SLPFindSrvs.dsw  SLPFindSrvs.expected.output  SLPFindSrvs.mak  test.script
openslp/test/SLPOpen/: Makefile  SLPOpen.c  slp.test.reg  test.script
openslp/test/SLPParseSrvURL/: Makefile  SLPParseSrvURL.c  SLPParseSrvURL.expected.output  test.script
openslp/test/SLPReg/: Makefile  SLPReg.c  SLPReg.expected.output  slp.test.reg  test.script
openslp/test/SLPUnescape/: Makefile  SLPUnescape.c  SLPUnescape.expected.output  test.script
openslp/test/SLP_attr_test/: slp_attr_test.c
openslp/win32/: .cvsignore  m.bat  openslp.bpg  openslp.dsw  openslp.sln  openslp.vs2010.sln
openslp/win32/icu/: icuuc.lib
openslp/win32/libslp/: .cvsignore  libslp.def  libslp.dsp  libslp.mak  libslp.vcproj  libslp.vcxproj  libslp.vcxproj.filters  m.bat  slp.bpf  slp.bpr
openslp/win32/libslpattr/: libslpattr.vcproj  libslpattr.vcxproj  libslpattr.vcxproj.filters
openslp/win32/libslpcommon/: libslpcommon.vcproj  libslpcommon.vcxproj  libslpcommon.vcxproj.filters
openslp/win32/libslpstatic/: libslpstatic.dsp  libslpstatic.vcproj  libslpstatic.vcxproj  libslpstatic.vcxproj.filters
openslp/win32/slpd/: .cvsignore  m.bat  slpd.bpr  slpd.dsp  slpd.mak  slpd.vcproj  slpd.vcxproj  slpd.vcxproj.filters
openslp/win32/slpdcommon/: slpdcommon.vcproj  slpdcommon.vcxproj  slpdcommon.vcxproj.filters
openslp/win32/slptool/: .cvsignore  bcbwrapper.c  m.bat  slptool.bpr  slptool.dsp  slptool.mak  slptool.vcproj  slptool.vcxproj  slptool.vcxproj.filters
openslp/win32/test/: SLPD_predicate_test.vcproj  SLPDereg.vcproj  SLPEscape.vcproj  SLPFindAttrs.vcproj  SLPFindSrvTypes.vcproj  SLPFindSrvs.vcproj  SLPOpen.vcproj  SLPParseSrvURL.vcproj  SLPReg.vcproj  SLPUnescape.vcproj  SLP_attr_test.vcproj  test.sln
(+256 files in other folders)
